--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,2 +1,2 @@
-body{direction:rtl}.navbar-dark .navbar-nav .nav-link{color:#fff}ul li{display:inline-block}ul li a{padding:5px 15px;color:#000;font-weight:400}ul li:hover a{color:#2196F6}
+body{direction:rtl}.navbar-dark .navbar-nav .nav-link{color:#fff}ul li{display:inline-block}ul li a{padding:5px 15px;color:#000;font-weight:400}ul li:hover a{color:#2196F6}.btn-group{direction:ltr}.btn-group .btn{background-color:#09f}.btn-group .btn:hover{background:#07f}.btn-group .btn a{color:#fff;text-decoration:none}
 /*# sourceMappingURL=style.css.map */
