update website to be as CV

--- a/termulator/assets/scss/style.scss
+++ b/termulator/assets/scss/style.scss
@@ -6,7 +6,7 @@ body{
         image: url('https://www.dailydot.com/wp-content/uploads/180/b6/41593ac0068c710f262a5525e9e9a5cf.jpg');
         repeat: no-repeat;
         size: cover;
-        attachment: fixed;
+        attachment: fixed
     }
 }
 h4{
